fix: make site more usable on mobile

--- a/portfolio/app/root.scss
+++ b/portfolio/app/root.scss
@@ -32,6 +32,6 @@
   }
 
   .container {
-    @apply px-4 md:px-8 max-w-7xl mx-auto w-full;
+    @apply px-4 lg:px-8 max-w-7xl mx-auto w-full;
   }
 }
